tests/baselines/reference/classAbstractConstructor.errors.txt
classAbstractConstructor.ts(2,5): error TS1242: 'abstract' modifier can only appear on a class, method, or property declaration.


==== classAbstractConstructor.ts (1 errors) ====
    abstract class A {
        abstract constructor() {}
        ~~~~~~~~
!!! error TS1242: 'abstract' modifier can only appear on a class, method, or property declaration.
    }